--- a/app/assets/stylesheets/app/wallet.css.scss
+++ b/app/assets/stylesheets/app/wallet.css.scss
@@ -64,7 +64,7 @@
   	border: 1px solid #999999;
   	display: inline-block;
   	height:105px;
-  	margin: 10px 3% 10px 0px;
+    margin: 10px 10px 10px 0px;
   	position:relative;
   	width:305px;
     text-align: center;
